--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
 				setTimeout(function(){
 					bReady = true;
 				},500)
+				audioScan.play();
+				audioGot.play();
 			},2000)
 		}
 	</script>
