--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				shake();
 			}
 		}
-		document.onclick = function(){
+		window.onclick = function(){
 			audioGot.play();
 			audioScan.play();
 		};
