--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 		<div class="bottom">
 			<img src="statics/wechat/hand.png" alt="">
 		</div>
-		<audio id="scan" src="statics/wechat/scan.mp3"></audio>
-		<audio id="got" src="statics/wechat/got.mp3"></audio>
+		<audio id="scan" src="statics/wechat/scan.mp3" preload="metadata" autoplay="false"></audio>
+		<audio id="got" src="statics/wechat/got.mp3" preload="metadata" autoplay="false"></audio>
 	</div>
 	<script>
 		var oTop = document.querySelector('.top');
